# sig_gen

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  details.txt  font_embedded.c  main.c  notes.txt  peak.txt  renderer.c  renderer.h  rms.txt  scope  sesh  sig_gen  sig_gen_1.0  signal.c  signal.h
src/: fir_coeffs.c  fir_coeffs.h  font_embedded.c  main.c  renderer.c  renderer.h  signal.c  signal.h
